<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_home"
        android:checkable="true"
        android:checked="true"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_calendar"
        android:checked="false"
        android:icon="@drawable/ic_calendar_gray"
        android:title="@string/menu_calendar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_news"
        android:checked="false"
        android:icon="@drawable/ic_news_gray"
        android:title="@string/menu_news"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_comment"
        android:checked="false"
        android:icon="@drawable/ic_danhsach_gray"
        android:title="@string/menu_list"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_media"
        android:checked="false"
        android:icon="@drawable/ic_media_gray"
        android:title="@string/menu_media"
        app:showAsAction="ifRoom" />
</menu>
